@@ -14,4 +14,11 @@
 		<setting id="tvshowplot" type="bool" label="30010" subsetting="true" enable="eq(-1,true)" visible="eq(-1,true)" default="false"/>
 		<setting id="episodes" type="bool" label="30011" subsetting="true" enable="eq(-2,true)" visible="eq(-2,true)" default="false"/>
 	</category>
+	<category label="30020">
+		<setting id="Enable_ftp" type="bool" label="30021" default="false"/>	
+		<setting type="sep" />		
+		<setting id="server" type="text" label="30022" subsetting="true" enable="eq(-2,true)" default=""/>
+		<setting id="user" type="text" label="30023" subsetting="true" enable="eq(-3,true)" default=""/>
+		<setting id="password" type="text" label="30024" subsetting="true" enable="eq(-4,true)" default="" option="hidden"/>		
+	</category>
 </settings>
